--- a/.github/workflows/pytest-ops.yml
+++ b/.github/workflows/pytest-ops.yml
@@ -1,4 +1,4 @@
-name: CI-ops
+name: Jupyter Notebooks
 
 on:
   # Trigger the workflow on push or pull request,
@@ -11,19 +11,34 @@ on:
       - master
 
 jobs:
-  build:
-    name: pytest-ops
-    runs-on: ubuntu-16.04
+  tutorials:
+    name: Test Jupyter notebooks on ${{ matrix.name }}
+    runs-on: ${{ matrix.os }}
 
     env:
-      DEVITO_ARCH: "gcc-7"
+      DEVITO_ARCH: "${{ matrix.compiler }}"
       DEVITO_OPENMP: 1
-      DEVITO_BACKEND: "ops"
-      OMP_NUM_THREADS: 2
-      CC: "gcc-7"
-      CXX: "g++-7"
+      DEVITO_BACKEND: "core"
       PYTHON_VERSION: "3.7"
-  
+
+    strategy:
+      # Prevent all build to stop if a single one fails
+      fail-fast: false
+      matrix:
+        name: [
+          ubuntu-16.04-gcc-py37,
+          macOS-10.14-gcc-py37
+          ]
+
+        include:
+          - name: ubuntu-16.04-gcc-py37
+            os: ubuntu-16.04
+            compiler: gcc-7
+
+          - name: macOS-10.14-gcc-py37
+            os: macOS-10.14
+            compiler: gcc
+
     steps:
     - name: Checkout devito
       uses: actions/checkout@v1
@@ -33,15 +48,33 @@ jobs:
       with:
         python-version: 3.7
 
-    - name: Install GCC 7
-      run : |
-        sudo apt-get install -y g++-7
+    - name: Install compilers
+      run: |
+        if [ "${{ matrix.compiler }}" = "gcc-7" ]; then
+           sudo apt-get install -y mpich libmpich-dev
+        else
+           brew install gcc
+           gcc --version
+           brew install mpich
+        fi
 
     - name: Install dependencies
       run: |
         pip install --upgrade pip
-        pip install -e .
+        pip install -e .[extras]
 
-    - name: Test with pytest
+    - name: CFD notebooks
       run: |
-        pytest tests/
+        py.test --nbval examples/cfd
+
+    - name: Seismic notebooks
+      run: |
+        py.test --nbval examples/seismic/tutorials/
+
+    - name: MPI notebooks
+      run: |
+        py.test --nbval examples/mpi
+
+    - name: User api notebooks
+      run: |
+        py.test --nbval examples/userapi
