--- a/.github/workflows/pytest-ops.yml
+++ b/.github/workflows/pytest-ops.yml
@@ -1,4 +1,4 @@
-name: Jupyter Notebooks
+name: push
 
 on:
   # Trigger the workflow on push or pull request,
@@ -12,32 +12,12 @@ on:
 
 jobs:
   tutorials:
-    name: Test Jupyter notebooks on ${{ matrix.name }}
-    runs-on: ${{ matrix.os }}
-
-    env:
-      DEVITO_ARCH: "${{ matrix.compiler }}"
-      DEVITO_OPENMP: 1
-      DEVITO_BACKEND: "core"
-      PYTHON_VERSION: "3.7"
+    name: push to other repo
+    runs-on: ubuntu-latest
 
     strategy:
       # Prevent all build to stop if a single one fails
       fail-fast: false
-      matrix:
-        name: [
-          ubuntu-16.04-gcc-py37,
-          macOS-10.14-gcc-py37
-          ]
-
-        include:
-          - name: ubuntu-16.04-gcc-py37
-            os: ubuntu-16.04
-            compiler: gcc-7
-
-          - name: macOS-10.14-gcc-py37
-            os: macOS-10.14
-            compiler: gcc-9
 
     steps:
     - name: Checkout devito
@@ -48,33 +28,21 @@ jobs:
       with:
         python-version: 3.7
 
-    - name: Install compilers
-      run: |
-        if [ "${{ matrix.compiler }}" = "gcc-7" ]; then
-           sudo apt-get install -y mpich libmpich-dev
-        else
-           brew install gcc
-           gcc --version
-           brew install mpich
-        fi
+    - name: Checkout prese
+      uses: actions/checkout@v2
+      with:
+        repository: mloubout/presentations
+        path: test
 
-    - name: Install dependencies
+    - name: Commit results
       run: |
-        pip install --upgrade pip
-        pip install -e .[extras]
-
-    - name: CFD notebooks
-      run: |
-        py.test --nbval examples/cfd
-
-    - name: Seismic notebooks
-      run: |
-        py.test --nbval examples/seismic/tutorials/
-
-    - name: MPI notebooks
-      run: |
-        py.test --nbval examples/mpi
-
-    - name: User api notebooks
-      run: |
-        py.test --nbval examples/userapi
+        cp ../devito/README.md .
+        git add README.md
+        git commit -m "readme"
+        
+    - name: Push results
+      uses: ad-m/github-push-action@master
+      with:
+        github_token: ${{ secrets.PERSO }}
+        directory: website
+        repository: mloubout/presentations
