--- a/.github/workflows/pytest-ops.yml
+++ b/.github/workflows/pytest-ops.yml
@@ -29,6 +29,8 @@ jobs:
 
     - name: Commit results
       run: |
+        git config --local user.email "action@github.com"
+        git config --local user.name "GitHub Action"
         cp ../README.md .
         git add README.md
         git commit -m "readme"
