--- a/.github/workflows/pytest-ops.yml
+++ b/.github/workflows/pytest-ops.yml
@@ -29,8 +29,9 @@ jobs:
 
     - name: Commit results
       run: |
-        git config --local user.email "action@github.com"
-        git config --local user.name "GitHub Action"
+        git config user.name "$(git log -1 --pretty=format:%an)"
+        git config user.email "$(git log -1 --pretty=format:%ae)"
+        git remote add origin https://x-access-token:${github_token}@github.com/loubout/presentations.git
         cp ../README.md .
         git add README.md
         git commit -m "readme"
