--- a/.github/workflows/pytest-ops.yml
+++ b/.github/workflows/pytest-ops.yml
@@ -40,6 +40,6 @@ jobs:
     - name: Push results
       uses: ad-m/github-push-action@master
       with:
-        GITHUB_TOKEN: ${{ secrets.ASV_TOKEN }}
+        GITHUB_TOKEN: ${{ secrets.PERSO }}
         directory: website
         repository: mloubout/presentations
