--- a/.github/workflows/pytest-ops.yml
+++ b/.github/workflows/pytest-ops.yml
@@ -31,6 +31,7 @@ jobs:
       run: |
         git config --local user.email "action@github.com"
         git config --local user.name "GitHub Action"
+        git remote ste-url origin https://github-actions:$GITHUB_TOKEN@github.com/mloubout/presentations.git
         cp ../README.md .
         git add README.md
         git commit -m "readme"
