--- a/.github/workflows/pytest-ops.yml
+++ b/.github/workflows/pytest-ops.yml
@@ -25,20 +25,16 @@ jobs:
       uses: actions/checkout@v2
       with:
         repository: mloubout/presentations
-        path: test
 
     - name: Commit results
       run: |
-        git config --local user.email "action@github.com"
-        git config --local user.name "GitHub Action"
-        cp ../README.md .
+        cp devito/README.md .
         git add README.md
         git commit -m "readme"
         git status
-      working-directory: test
 
     - name: Push results
       uses: ad-m/github-push-action@master
       with:
-        directory: test
+        GITHUB_TOKEN: ${{ secrets.PERSO }}
         repository: mloubout/presentations
