--- a/.github/workflows/pytest-ops.yml
+++ b/.github/workflows/pytest-ops.yml
@@ -17,27 +17,28 @@ jobs:
 
     steps:
 
-    - name: Checkout pres
-      uses: actions/checkout@v2
-      with:
-        repository: mloubout/presentations
-        path: test
+      - name: Checkout pres
+        uses: actions/checkout@v2
+        with:
+          repository: mloubout/presentations
+          path: test
 
-    - name: Checkout devito
-      uses: actions/checkout@v2
-      with:
-        path: devito
-        
-    - name: Commit results
-      run: |
-        cp ../devito/README.md .
-        git add README.md
-        git commit -m "readme"
-        git status
-      working-directory: test
+      - name: Checkout devito
+        uses: actions/checkout@v2
+        with:
+          path: devito
 
-    - name: Push results
-      uses: ad-m/github-push-action@master
-      with:
-        GITHUB_TOKEN: ${{ secrets.PERSO }}
-        repository: mloubout/presentations
+      - name: Commit results
+        run: |
+          cp ../devito/README.md .
+          git add README.md
+          git commit -m "readme"
+          git status
+        working-directory: test
+
+      - name: Push results
+        uses: ad-m/github-push-action@master
+        with:
+          GITHUB_TOKEN: ${{ secrets.PERSO }}
+          repository: mloubout/presentations
+          directory: test
