--- a/setup.cfg
+++ b/setup.cfg
@@ -5,7 +5,7 @@ exclude = .github
 
 [tool:pytest]
 python_files = test_*.py *_example.py example_*.py
-addopts = --durations=20 --maxfail=5
+addopts = --durations=20
 
 [versioneer]
 VCS = git
